# marl-ecs-course

./: .gitignore  Answer_1.ipynb  Assignment1.ipynb  Assignment1_Q1.py  Assignment_1.ipynb  Assignment_3.py  MARL-Ass-1.ipynb  MARL_Project_DQN_3.ipynb  MARL_asgn1_q1.ipynb  MARL_asgn1_q2.ipynb  MARLe_assignment1_Q1.ipynb  MARLe_assignment1_Q2.ipynb  Q.1.ipynb  Q.2.ipynb  Q1.py  Q2.py  Q2_Grid.ipynb  Q_learning.py  Question_2_Assignment_1_MARL.ipynb  Questiontion_1_Assignment_1_MARL.ipynb  README.md  ReadME.md  a34.py  footbalenv.py  football.ipynb  marl_ass1_q1.ipynb  marl_ass1_q2.ipynb  mc.py  pyproject.toml  q1MC.py  q1_assignment1.py  q1_dp.py  q23.py  q2_assignment1.py  question1_MC.py  question1_value_iteration.py  question2_value_iteration.py  readme.md  requirements.txt  requiremets.txt  (+2 more)
Assignement - 1/: Assignemt - 1.ipynb  readme.md
Assignment - 1/: readme.md
Assignment - 3/: README.md  agent.py  environment.py  train.py
Assignment 1/: Assignment1_Q1.py  Assignment1_Q2.ipynb  Q1.py  Q2.py  Que 1.1.py  Que 1.2.py  Que 1.3.docx  Que 2.1.py  Que 2.2.py  Que1.3.py  README.md  readme.md
Assignment 3/: MARL_ass3.ipynb  MARL_assignment3.ipynb  README.md  agent.py  marl_assignment_three.ipynb  train.py
Assignment-1/: Assignment_1_Q1.ipynb  Assignment_1_Q2.ipynb  Q1-written.HEIC  Q1.py  Q2.py  Question1_MDP.ipynb  Question2_Grid.ipynb  README.md  q1_assignment1.ppy.py  que_1.ipynb
Assignment-2/: 21302_Assignement2_Question1.ipynb  21302_Assignemnet2_Ques2.ipynb  Q1_DP.ipynb  Q1_MC.ipynb  Q2_DP.ipynb  Q2_MC.ipynb  README.md  READme.md  TSP_Monte_Carlo.py  tsp.py  (+5 more)
(+2851 files in other folders)
